--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>I KNOW MY IP | Kolay IP Bilgi Servisi</title>
+    <title>I KNOW MY IP | IP Information Tool</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="description" content="View your IP address information instantly. Check DNS records, scan ports, and resolve domains with custom DNS servers." />
   </head>
   <body>
     <div id="root"></div>
